--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -30,10 +30,12 @@ color:  #25d366;
   color: hwb(0 3% 4%);
 }
 .footer-bottom-boxed .bg-white{
-  
+ 
 }
 .footer-bottom-boxed{
   padding: 25px 50px;
+ 
+
 }
 .social-media{
   text-align: center;
@@ -42,17 +44,18 @@ color:  #25d366;
   list-style-type: none;
  }
  .bbox{
-  padding-top: 40px;
+  padding-top: 20px;
+ 
+
+  
  }
  .footer-bottom-boxed{
-  background-color: rgb(239, 244, 249);
+  background-color:whitesmoke;
   margin-bottom: 20px;
-  
-  box-shadow:0 0 8px 1px rgb(218, 215, 208);
+  box-shadow:0 0 5px 1px rgb(218, 215, 208);
   transition: ease-out 0.2s;
  }
-
- .tblack{
+.tblack{
   color: #000;
  }
  .lblack
@@ -66,5 +69,22 @@ color:  #25d366;
   color: orangered;
 }
 .footer{
-  background-color: hsl(240, 5%, 92%)
+  background-color: hwb(240 89% 5%)
+}
+.linkss{
+  
+  margin-left: 200px;
+  font-weight: 700;
+  color: #000;
+  font-size: large;
+  text-decoration: none;
+}
+.ast-footer-site-title{
+  margin-left: 300px;
+}
+.footer-site-title{
+  margin-left: 5px;
+}
+.sub-title-footer{
+  margin-left: 10px;
 }
