--- a/src/components/myCarousel/MyCarousel.css
+++ b/src/components/myCarousel/MyCarousel.css
@@ -84,8 +84,10 @@
     font-size: 15px;
     white-space: nowrap;
     width: 205px;
-padding: 5px;
+    padding: 5px;
+    text-decoration: none;
   }
+  
 
   
   .btn2{
@@ -103,6 +105,7 @@ padding: 5px;
     white-space: nowrap; 
     width: 205px;
     padding: 5px;
+    text-decoration: none;
 
   }
   .arrow{
