--- a/src/components/whatshop/Whatshap.css
+++ b/src/components/whatshop/Whatshap.css
@@ -5,9 +5,10 @@
   width: 50px;
   border-radius: 70%;
   z-index: 10; 
-  margin-right: 40px;
-  margin-bottom:100px;
-  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom:30px;
+  margin-top: 30px;
+  margin-left: 50px;
 }
 
 /* Default positioning for larger screens */
