--- a/src/App.css
+++ b/src/App.css
@@ -4,24 +4,23 @@
   height: 50px;
   width: 100%;
   position: absolute;
-  margin-top:600px;
+  margin-top:570px;
 }
 
 #scroll {
   display: flex;
   justify-content: center;
-  border: 3px solid orangered;
   font-size: 15px;
-  width: 50px;
-  height:50px;
+  width: 40px;
+  height:40px;
   border-radius: 40px;
   font-size: 22px;
   text-align: center;
   position: fixed;
-  color: orangered;;
-  background-color:#ededf4; 
+  color:white;
+  background-color: orangered;
   z-index: 10;
-  padding-top: 10px;
+  padding-top:6px;
 }
 
 
