--- a/src/ServicesType.css
+++ b/src/ServicesType.css
@@ -21,12 +21,11 @@
 .service-cards-img {
   width: 130px;
   height: 130px;
-  margin-left: 40px;
+  margin-left: 0px;
   margin-top: 10px;
-  border-radius: 90px;
   background-repeat: no-repeat;
-  border: 3px solid   orangered;;
- background-size:300px 100px ;
+ background-size:cover;
+ mix-blend-mode: multiply;
 }
 
 @media  (max-width:550px) {
@@ -37,18 +36,11 @@
   margin-top: 10px;
   border-radius: 90px;
   background-repeat: no-repeat;
-  border-left: 7px solid  orangered;;
-  border-right: 7px solid  orangered;;
+  border-left: 7px solid  orangered;
+  border-right: 7px solid  orangered;
  background-size:300px 100px ;
 }}
 
-.service-cards-img:hover {
-  width: 130px;
-  height: 130px;
-  margin-left: 40px;
-  transform: scale(0.9);
-  transition: ease-out 0.2s;
-}
 
 @media  (max-width:550px) {
   .service-cards-img:hover {
@@ -59,17 +51,41 @@
     transition: ease-out 0.2s;
   }
 }
+
 .service-card {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white ;
+  flex-wrap: wrap;
+  text-align: center;
+  background-color:white;
   margin: 15px;
-  
-  box-shadow:0 0 10px 0 black;
-  width: 34rem;
-
+  box-shadow:0 0 6px 0 black;
+  width: 20rem;
+  padding-bottom: 10px;
 }
+
+.overflow-color{
+  display: flex;
+  flex-direction: column;
+}
+
+.span{background-color: orange;
+  height: 55%;
+  top: 143px;
+  width: 0;
+  position: absolute;
+  left: 0;
+  z-index: 0;
+  transition: 0.3s;
+  }
+
+  .service-card:hover .span{
+  width: 100%;
+  height: 55%;
+  z-index: 0;
+  }
+
 @media  (max-width:550px) {
   .service-card {
     display: flex;
@@ -80,7 +96,7 @@
     background-color: white ;
     margin: 15px;
     box-shadow:0 0 6px 0 black;
-    width: 34rem;
+    width: 19rem;
     padding-bottom: 10px;
   }
 }
@@ -89,26 +105,25 @@
   justify-content: center;
   align-items: center;
   margin: 15px;
- box-shadow:0 0 10px 1px  orangered;;
 transition: ease-out 0.5s;
-transform: scale(1.1);
+transform: scale(1);
 padding-bottom: 10px;
+color: white;
 }
 
 
 .service-name {
   font-size: 22px;
   font-weight: 700;
-  text-align: start;
-  margin-left: 30px;
+  text-align: center;
+  z-index: 1;
   padding-top: 10px;}
 
   @media  (max-width:550px) {
     .service-name {
       font-size: 22px;
       font-weight: 700;
-      text-align: start;
-      margin-left: 0px;
+      z-index:1;
       padding-top: 10px;
     text-align: center;}
   }
@@ -117,6 +132,7 @@ padding-bottom: 10px;
   opacity: 0.7;
   font-size: 13px;
   font-weight: 600;
+  z-index:1;
   text-align: start;
   margin-left: 30px;
 }
@@ -125,40 +141,11 @@ padding-bottom: 10px;
   .discription {
     opacity: 0.7;
     font-size: 13px;
+    z-index: 1;
     font-weight: 600;
     text-align: start;
     margin: 10px;
   }}
 
 
-.read-btn {
-  margin-top: 25px;
-  margin-left: 20px;
-  background-color: white;
-  border: none;
-  font-size: 13px;
-  font-weight: 600;
-  width: 120px;
 
-}
-
-.read-btn:hover  {
-  margin-top: 25px;
-  margin-left: 20px;
-  background-color: white;
-  border: none;
-  font-size: 13px;
-  font-weight: 600;
-  color: orange;
-  width: 120px;
-  text-decoration: underline orange;
-  text-decoration-color:red ;
-  transition: ease-out 0.5s;
-  transform: translateX(10px);
-}
-
-.read-btn-arrow {
-  font-size: 20px;
-  color: black;
-
-}
