--- a/src/Components copy/Faq.css
+++ b/src/Components copy/Faq.css
@@ -1,5 +1,6 @@
 .faq_img{
     width: 100%;
+   margin-top: 6rem;
 }
 
 .main{
@@ -10,13 +11,15 @@
 
 .faq-heading{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center ;
     font-size: 53px;
     font-weight: 700;
-    margin-bottom: 50px;
     color:white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /* text-decoration: underline;
+    text-decoration-color: #ff4328; */
     }
 
     .accordion_section{
@@ -26,4 +29,10 @@
     .accordion_bg{
 background-color: #2F3369;
 color: white;
+    }
+
+    .first-letter{
+        color: #ff4328;
+        font-size: 60px;
+        margin-left: 1rem;
     }
