--- a/src/Components copy/Help.css
+++ b/src/Components copy/Help.css
@@ -57,6 +57,7 @@
     color:rgb(14, 13, 13) ;
     text-align: center;
     margin: 2px;
+    position: relative;
     display:flex;
     align-items: center;
     flex-direction: row;
@@ -66,6 +67,22 @@
     width: 205px;
     padding: 10px 5;
   }
+
+ .btn_color{background-color: yellow;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    width: 0;
+    left: 0;
+    z-index: 0;                                                     
+    transition: 0.3s;
+    }
+    .btn1:hover .btn_color{
+    width: 100%;
+    height: 100%;
+    color: black;
+    z-index: 3;
+    }
 
 
   .shape{
