--- a/src/Components copy/ReqService.css
+++ b/src/Components copy/ReqService.css
@@ -18,15 +18,11 @@ color: #2F3369;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .wrapper{
-    padding: 10px 20px;
+    padding: 15px 30px;
     border: #2F3369, 2px solid; 
     border-radius: 10px;
     box-shadow:0px 10px #2F3369,inset 0px 10px #2F3369;
     margin-bottom: 10rem;
-    display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
 }
 
 .contact-form-label{
@@ -43,7 +39,7 @@ flex-direction: column;
     font-size: 16px;
     position: relative;
     height: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 
@@ -116,4 +112,9 @@ top: 100%;
 font-size: 18px;
 color: #2F3369;
 padding-bottom: 10px;
+}
+.OS_image{
+    width: 100%;
+    height: 60%;
+    margin-top: 4rem;
 }
