--- a/src/Components copy/ReqService.css
+++ b/src/Components copy/ReqService.css
@@ -114,7 +114,16 @@ color: #2F3369;
 padding-bottom: 10px;
 }
 .OS_image{
-    width: 100%;
+    width: 80%;
     height: 60%;
-    margin-top: 4rem;
+    margin-top: 2rem;
+}
+@media (max-width:500px) {
+    .OS_image{
+        width: 80%;
+        height: 60%;
+        margin-top: 2rem;
+        margin-left: 2rem;
+    }
+    
 }
