--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,18 @@
   height: 50px;
   width: 100%;
   position: absolute;
-  margin-top:570px;
+  margin-top:520px;
+}
+
+@media (max-width:500px) {
+  .uparrow{
+    display: flex;
+    justify-content: end;
+    height: 50px;
+    width: 100%;
+    position: absolute;
+    margin-top:620px;
+  }
 }
 
 #scroll {
