--- a/src/components/myCarousel/MyCarousel.css
+++ b/src/components/myCarousel/MyCarousel.css
@@ -46,7 +46,9 @@
     color: #fff;
   }
   .image{
-    height: 20%;
+    margin-top: 100px;
+    margin-left: 100px;
+    height:400px;
     width: 100%;
   }
   .h{
