--- a/src/components/whatshop/Whatshap.css
+++ b/src/components/whatshop/Whatshap.css
@@ -1,11 +1,11 @@
 
 .whatsapp-img {
   position: fixed;
-  height: 50px;
-  width: 50px;
-  margin-top:40px ;
- border-radius: 90%;
- margin-bottom: 50px;
+  height: 40px;
+  width: 40px;
+  margin-bottom: 15px;
+  border-radius: 90%;
+ margin-bottom: 10px;
  z-index: 99999; 
 }
 
@@ -20,8 +20,8 @@
   .whatsapp-img {
     top: calc(100% - 80px); 
     left: calc(100% - 80px); 
-    height: 64px;
-    width: 64px;
+    height: 54x;
+    width: 54px;
   }
 }
 
