--- a/src/About.css
+++ b/src/About.css
@@ -3,8 +3,8 @@
 background-image: url('./assets/About-img/circle_border.png');
 background-color: white;
 background-repeat: no-repeat;
-padding-top: 50px;
-padding-bottom: 40px;
+padding-top: 20px;
+padding-bottom: 10px;
 } 
 
 .small-title{
@@ -19,26 +19,58 @@ padding-bottom: 40px;
   font-weight: 700;
 }
 
+.aboutus-content{
+  display: flex;
+  justify-content: space-around;
+}
 
+@media (max-width:990px){
+  .aboutus-content{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+}
 
 .Group-img{
-width:27rem;
+width:29rem;
+height: 34rem;
 border-bottom: 10px solid orangered;
 border-top: 10px solid blue;
 }
 
+@media (max-width:500px) {
+  .Group-img{
+    width:23rem;
+    height: 31rem;
+    border-bottom: 10px solid orangered;
+    border-top: 10px solid blue;
+    }
+}
+
 .Group-img:hover{
-  width:27rem;
+  width:29rem;
   border-bottom: 10px solid blue;
   border-top: 10px solid orangered;
   filter: blur(1px) saturate(1.2);
   transition: ease-out 0.5s;
   }
 
+  @media (max-width:500px) {
+    .Group-img:hover{
+      width:23rem;
+      border-bottom: 10px solid blue;
+      border-top: 10px solid orangered;
+      filter: blur(1px) saturate(1.2);
+      transition: ease-out 0.5s;
+      }
+  }
+
+
 .play-btn{
   position: absolute;
   z-index: 2;
-  margin-left:220px;
+  margin-left:200px;
   margin-top: 240px;
   width:90px;
   height:90px;
@@ -47,11 +79,24 @@ border-top: 10px solid blue;
   border-radius: 50px;
 }
 
+@media (max-width:500px) {
+  .play-btn{
+    position: absolute;
+    z-index: 2;
+    margin-left:165px;
+    margin-top: 240px;
+    width:90px;
+    height:90px;
+    background-color:white;
+    padding: 30px;
+    border-radius: 50px;
+  }
+}
 .ring{
   position: absolute;
   z-index:1;
   margin-top:283px;
-  margin-left:265px;
+  margin-left:245px;
   height: 20px;
   width: 20px;
   background-color:none;
@@ -68,11 +113,28 @@ border-top: 10px solid blue;
       width:150px;
     opacity: 0;}
 }
+
+@media (max-width:500px) {
+  .ring{
+    position: absolute;
+    z-index:1;
+    margin-top:283px;
+    margin-left:210px;
+    height: 20px;
+    width: 20px;
+    background-color:none;
+    border: 5px solid white;
+    border-radius: 70px;
+    animation: ring 1.7s ease-out infinite;
+    transform: translate(-50%,-50%);
+  }
+}
+
 .ring2{
   position: absolute;
   z-index:1;
   margin-top:283px;
-  margin-left:265px;
+  margin-left:245px;
   height: 20px;
   width: 20px;
   background-color:none;
@@ -82,7 +144,21 @@ border-top: 10px solid blue;
   transform: translate(-50%,-50%);
 }
 
-
+@media (max-width:500px) {
+  .ring2{
+    position: absolute;
+    z-index:1;
+    margin-top:283px;
+    margin-left:210px;
+    height: 20px;
+    width: 20px;
+    background-color:none;
+    border: 5px solid white;
+    border-radius: 70px;
+    animation: ring2 2s ease-out infinite;
+    transform: translate(-50%,-50%);
+  }
+}
 
 @keyframes ring2{
   0%{  height: 30px;
@@ -95,37 +171,45 @@ border-top: 10px solid blue;
 
 
 .about-content{
-   width: 500px;
-height: 500px; 
+   width:520px;
+}
 
+@media (max-width:500px){
+  .about-content{
+    width:300px;
+ } 
+} 
+
+.about-content{
+  display: flex;
+  flex-direction: column;
 }
 
 .about-content-p{
-  text-align: start;
-  border-left: 3px solid   orangered;;
-  margin: 10px;
+  border-left: 3px solid   orangered;
 }
 
-.about-cards{
+.about-cards{ 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  margin-top: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   text-align: start;
 }
 
-.about-cards:hover{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  margin-top: 20px;
-  text-align: start;
 
+@media (max-width:500px){
+  .about-cards{ 
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    text-align: start;
+  }
 }
+
 
 .about-card{
-  width: 230px;
+  width:240px;
   padding: 30px;
-
 }
+
 .about-card:hover{
   box-shadow:0 0 10px 1px orange;
 transition: ease-out 0.4s;
