--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.uparrow{
+/* .uparrow{
   display: flex;
   justify-content: end;
   height: 30px;
   width: 100%;
   position: absolute;
-  margin-top:540px;
+  margin-top:530px;
 }
 
 @media (max-width:500px) {
@@ -14,7 +14,7 @@
     height: 50px;
     width: 100%;
     position: absolute;
-    margin-top:620px;
+    margin-top:640px;
   }
 }
 
@@ -32,6 +32,24 @@
   background-color: orangered;
   z-index: 10;
   padding-top:6px;
+  margin-right: 40px;
 }
 
-
+@media (max-width:500px) {
+  #scroll {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    width: 40px;
+    height:40px;
+    border-radius: 40px;
+    font-size: 22px;
+    text-align: center;
+    position: fixed;
+    color:white;
+    background-color: orangered;
+    z-index: 10;
+    padding-top:6px;
+    margin-right: 20px;
+  }
+} */
