--- a/src/components/goToTop/GoToTop.css
+++ b/src/components/goToTop/GoToTop.css
@@ -1,14 +1,52 @@
-#scroll {
-  font-size: 15px;
-  line-height: 50px;
-  z-index: 1;
-  width: 200px;
-  height: 200px;
-  display: block;
-  text-align: right;
-  position: relative;
-  color: #ff4328;
-  background-color: blue;
-  padding: 20px;
+.uparrow {
+  position: fixed;
+  height: 36px;
+  width: 36px;
+  margin-bottom: 15px;
+  border-radius: 90%;
+ margin-bottom: 10px;
+ z-index: 99999; 
+ background-color:white;
+ border-bottom:0 0 10px black;
+padding: 20px;
+display: flex;
+justify-content: center;
+}
 
+.uparrow {
+top: calc(100% - 150px); 
+  left: calc(100% - 100px); 
+}
+
+#scroll{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+font-weight: 700;
+  color: blue;
+}
+
+
+
+/* For tablets */
+@media (max-width: 768px) {
+  .uparrow {
+    position: fixed;
+    top: calc(100% - 117px); 
+    left: calc(100% - 80px); 
+    height: 45px;
+    width: 45px;
+  }
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+  .uparrow {
+    position: fixed;
+    top: calc(100% - 90px);
+    left: calc(100% - 60px); 
+    height: 45px;
+    width: 45px;
+  }
 }
