--- a/src/Components copy/Contact.css
+++ b/src/Components copy/Contact.css
@@ -8,6 +8,7 @@
     background-color:  #2F3369;
     color:white;
     padding-bottom: 3rem;
+    padding-top: 5rem;
 }
 .contact_container{
     padding: 2rem;
@@ -30,8 +31,8 @@
 .small-title{
 font-family: "pacifico",cursive;
 color:#ff4328;
-font-size: 30px;
-font-weight: 700;
+font-size: 20px;
+font-weight: 600;
 }
 
 .big-title{
