--- a/src/Components copy/Help.css
+++ b/src/Components copy/Help.css
@@ -92,3 +92,114 @@
     margin-top: 125px;
     z-index: 1;
 }
+.ring1{
+    position: absolute;
+    z-index:1;
+    margin-top:250px;
+    margin-left:340px;
+    height: 20px;
+    width: 20px;
+    background-color:none;
+    border: 5px solid white;
+    border-radius: 70px;
+    animation: ring 1.7s ease-out infinite;
+    transform: translate(-50%,-50%);
+  }
+  @keyframes ring{
+    0%{  height: 30px;
+      width: 30px;
+    opacity: 1;}
+      100%{height: 150px;
+        width:150px;
+      opacity: 0;}
+  }
+  
+  @media (max-width:500px) {
+    .ring1{
+      position: absolute;
+      z-index:1;
+      margin-top:283px;
+      margin-left:210px;
+      height: 20px;
+      width: 20px;
+      background-color:none;
+      border: 5px solid white;
+      border-radius: 70px;
+      animation: ring 1.7s ease-out infinite;
+      transform: translate(-50%,-50%);
+    }
+  }
+  
+  .ring2{
+    position: absolute;
+    z-index:1;
+    margin-top:283px;
+    margin-left:245px;
+    height: 20px;
+    width: 20px;
+    background-color:none;
+    border: 5px solid white;
+    border-radius: 70px;
+    animation: ring2 2s ease-out infinite;
+    transform: translate(-50%,-50%);
+  }
+  
+  @media (max-width:500px) {
+    .ring2{
+      position: absolute;
+      z-index:1;
+      margin-top:283px;
+      margin-left:210px;
+      height: 20px;
+      width: 20px;
+      background-color:none;
+      border: 5px solid white;
+      border-radius: 70px;
+      animation: ring2 2s ease-out infinite;
+      transform: translate(-50%,-50%);
+    }
+  }
+  
+  @keyframes ring2{
+    0%{  height: 30px;
+      width: 30px;
+    opacity: 1;}
+      100%{height: 150px;
+        width:150px;
+      opacity: 0;}
+  }
+  
+  
+  .about-content{
+     width:520px;
+  }
+  
+  @media (max-width:500px){
+    .about-content{
+      width:300px;
+   } 
+  } 
+  
+  .about-content{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .about-content-p{
+    border-left: 3px solid   orangered;
+  }
+  
+  .about-cards{ 
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    text-align: start;
+  }
+  
+  
+  @media (max-width:500px){
+    .about-cards{ 
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      text-align: start;
+    }
+  }
