--- a/src/ServicesType.css
+++ b/src/ServicesType.css
@@ -68,7 +68,7 @@
   flex-direction: column;
 }
 
-.span{background-color: orange;
+.span{background-color:blue;
   height: 55%;
   top: 143px;
   width: 0;
@@ -82,6 +82,7 @@
   width: 100%;
   height: 55%;
   z-index: 0;
+  color: white;
   }
 
 @media  (max-width:550px) {
@@ -127,7 +128,7 @@ color: white;
   }
 
 .discription {
-  opacity: 0.7;
+  opacity: 0.8;
   font-size: 13px;
   font-weight: 600;
   z-index:1;
@@ -137,7 +138,7 @@ color: white;
 
 @media  (max-width:550px) {
   .discription {
-    opacity: 0.7;
+    opacity: 0.8;
     font-size: 13px;
     z-index: 1;
     font-weight: 600;
