--- a/src/Components copy/Help.css
+++ b/src/Components copy/Help.css
@@ -146,17 +146,8 @@
   
   @media (max-width:500px) {
     .ring2{
-      position: absolute;
-      z-index:1;
-      margin-top:283px;
-      margin-left:210px;
-      height: 20px;
-      width: 20px;
-      background-color:none;
-      border: 5px solid white;
-      border-radius: 70px;
-      animation: ring2 2s ease-out infinite;
-      transform: translate(-50%,-50%);
+      
+  display: none;
     }
   }
   
