--- a/src/Components copy/Help.css
+++ b/src/Components copy/Help.css
@@ -116,18 +116,7 @@
   
   @media (max-width:500px) {
     .ring1{
-      position: absolute;
-      z-index:1;
-      margin-top:283px;
-      margin-left:210px;
-      height: 20px;
-      width: 20px;
-      background-color:none;
-      border: 5px solid white;
-      border-radius: 70px;
-      animation: ring 1.7s ease-out infinite;
-      transform: translate(-50%,-50%);
-    }
+     display: none;}
   }
   
   .ring2{
@@ -146,8 +135,7 @@
   
   @media (max-width:500px) {
     .ring2{
-      
-  display: none;
+        display: none;
     }
   }
   
