--- a/src/Whychooseus.css
+++ b/src/Whychooseus.css
@@ -3,8 +3,8 @@
   justify-content: center;
   flex-direction: column;
   margin: 10px;
-  height: 240px;
-  width: 240px;
+  height: 242px;
+  width: 242px;
   padding: 40px;
   text-align: center;
 border-radius: 200px;
@@ -15,6 +15,7 @@ border-bottom: 5px solid  rgb(64, 64, 255);
 .choose-titel{
   font-size: 53px;
   font-weight: 700;
+  padding-bottom: 20px;
 }
 
 .qus-mark{
@@ -24,8 +25,8 @@ border-bottom: 5px solid  rgb(64, 64, 255);
 
 
 .titel{
-  font-size: 15px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: 700;
   padding-bottom: 10px;
 }
 
