--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -71,19 +71,19 @@ transition: color 0.3s ease;
   color: orangered;
 }
 .footer{
-  background-color: rgb(168, 168, 174)
+  background-color: rgb(192, 192, 230)
 }
 .linkss{
   
   margin-left: 200px;
   font-weight: 700;
-  color: hsla(232, 84%, 48%, 0.5);
+  color: hwb(232 3% 4% / 0.5);
   font-size: large;
   text-decoration: none;
 }
 
 .footer {
-  background-color: #f8f9fa;
+  background-color: #e0e3e6;
   padding: 20px 0;
   width: 100%;
 }
@@ -147,4 +147,9 @@ transition: color 0.3s ease;
   .footer .social-media li {
     margin: 0 5px;
   }
+}
+.ast-footer-site-titl{
+  font-size: 22px;
+  font-weight: 300px;
+
 }
