--- a/src/components/whatshop/Whatshap.css
+++ b/src/components/whatshop/Whatshap.css
@@ -3,10 +3,12 @@
   position: fixed;
   height: 40px;
   width: 40px;
-  margin-bottom: 15px;
+  margin-bottom: 10x;
   border-radius: 90%;
- margin-bottom: 10px;
- margin-top:35px ;
+  margin-bottom: 10px;
+  margin-top:40px ;
+  margin-right: 10px;
+
 
  z-index: 99999; 
 }
