--- a/src/components/myCarousel/MyCarousel.css
+++ b/src/components/myCarousel/MyCarousel.css
@@ -1,6 +1,6 @@
 .background-slid {
     width: 100%;
-    height: 40rem;
+    height: 35rem;
     margin: 0px;
     padding-top: 20px;
     margin-top: 0px;
@@ -11,7 +11,7 @@
  .container-carousels-fluid {
     max-width: 1600px;
     max-height: 1600px;
-    margin: 10px;
+    margin: 30px;
     padding: 2px;
   
   }
@@ -49,7 +49,7 @@
   .image{
     margin-top: 100px;
     margin-left: 100px;
-    height:400px;
+    height:300px;
     width: 100%;
   }
   .h{
@@ -80,6 +80,7 @@
     color:rgb(14, 13, 13) ;
     text-align: center;
     margin: 2px;
+    padding-left: 10px;
     display:flex;
     align-items: center;
     flex-direction: row;
