--- a/src/Components copy/ReqService.css
+++ b/src/Components copy/ReqService.css
@@ -117,7 +117,7 @@ padding-bottom: 10px;
     width: 80%;
     height: 80%;
     margin-top: 2rem;
-    transition: all 1ms linear;
+    transition: all 1s ease-in-out;
 }
 .OS_image:hover{
     transform: scale(0.9);
