--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-.containerrs{
+/* .containerrs{
  margin-left: 100px;
  margin-right: 60px;
  }
@@ -47,9 +47,6 @@ transition: color 0.3s ease;
  }
  .bbox{
   padding-top: 20px;
- 
-
-  
  }
  .footer-bottom-boxed{
   background-color:whitesmoke;
@@ -103,7 +100,7 @@ transition: color 0.3s ease;
   color: #0056b3;
 }
 
-/* .footer .social-media i {
+ .footer .social-media i {
   font-size: 20px;
   color: hsl(0, 2%, 8%);
   margin-right: 10px;
@@ -112,7 +109,7 @@ transition: color 0.3s ease;
 
 .footer .social-media i:hover {
   color: #0056b3;
-} */
+} 
 
 .footer-bottom-boxed {
   border-top: 1px solid #ddd;
@@ -150,6 +147,95 @@ transition: color 0.3s ease;
 }
 .ast-footer-site-titl{
   font-size: 22px;
-  font-weight: 300px;
+  font-family: 600;
 
+} */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+.footer {
+  background-color:rgb(11, 15, 79);
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  padding: 20px 0;
+}
+
+.footer h5 {
+  color: #ff4328;
+  font-weight: 500;
+  margin-bottom: 15px;
+  font-family: roboto;
+}
+
+.footer p, .footer a, .footer li {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.6;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer .list-footer, .footer .contact-info {
+  padding-left: 0;
+}
+
+.footer .list-footer li, .footer .contact-info li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.footer .bbox {
+  margin-top: 20px;
+  border-top: 1px solid #ff4328;
+  padding-top: 20px;
+}
+
+.footer-bottom-boxed {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.linkss {
+  color:white;
+}
+
+.linkss:hover {
+  text-decoration: underline;
+}
+
+.contact-detailss i {
+  margin-right: 0px;
+}
+
+
+.contact-detailss a {
+  color: #fff;
+}
+
+.contact-detailss a:hover {
+  text-decoration: underline;
+}
+.contact-info-footer{
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  text-align:left;
+  padding-left: 0;
+}
+
+li::marker{
+  content: " ";
+}
+.phone-icon{
+}
+.footer-heading{
+  font-family: roboto;
 }
