--- a/src/About.css
+++ b/src/About.css
@@ -7,12 +7,6 @@ padding-top: 30px;
 padding-bottom: 10px;
 } 
 
-.smaller-title{
-  font-size: 20px;
-  font-weight: 600;
-  color: orangered;
-  font-family:"Pacifico", cursive;
-}
 
 .big-title{
   font-size: 53px;
@@ -35,8 +29,8 @@ padding-bottom: 10px;
 .Group-img{
 width:29rem;
 height: 34rem;
-border-bottom: 10px solid orangered;
-border-top: 10px solid blue;
+border-bottom: 10px solid blue;
+border-top: 10px solid orangered;
 }
 
 @media (max-width:500px) {
@@ -77,6 +71,7 @@ border-top: 10px solid blue;
   background-color:white;
   padding: 30px;
   border-radius: 50px;
+  box-shadow: 0 0 8px 0 orangered;
 }
 
 @media (max-width:500px) {
@@ -90,6 +85,7 @@ border-top: 10px solid blue;
     background-color:white;
     padding: 30px;
     border-radius: 50px;
+    box-shadow: 0 0 8px 0 orangered;
   }
 }
 .ring{
@@ -100,7 +96,8 @@ border-top: 10px solid blue;
   height: 20px;
   width: 20px;
   background-color:none;
-  border: 5px solid white;
+  border: 5px solid orangered;
+  
   border-radius: 70px;
   animation: ring 1.7s ease-out infinite;
   transform: translate(-50%,-50%);
@@ -123,7 +120,7 @@ border-top: 10px solid blue;
     height: 20px;
     width: 20px;
     background-color:none;
-    border: 5px solid white;
+    border: 5px solid orangered;
     border-radius: 70px;
     animation: ring 1.7s ease-out infinite;
     transform: translate(-50%,-50%);
@@ -138,7 +135,7 @@ border-top: 10px solid blue;
   height: 20px;
   width: 20px;
   background-color:none;
-  border: 5px solid white;
+  border: 5px solid orangered;
   border-radius: 70px;
   animation: ring2 2s ease-out infinite;
   transform: translate(-50%,-50%);
@@ -153,7 +150,7 @@ border-top: 10px solid blue;
     height: 20px;
     width: 20px;
     background-color:none;
-    border: 5px solid white;
+    border: 5px solid orangered;
     border-radius: 70px;
     animation: ring2 2s ease-out infinite;
     transform: translate(-50%,-50%);
@@ -185,12 +182,14 @@ border-top: 10px solid blue;
   flex-direction: column;
 }
 
-.about-content-scroll{
-  height: 100px;
-}
-
 .about-content-p{
   border-left: 3px solid   orangered;
+  opacity: 0.8;
+  font-weight: 600;
+  font-size: 15px;
+padding:41px;
+font-family: roboto;
+text-align: center;
 }
 
 .about-cards{ 
