--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,3 @@
-/* .uparrow{
-  display: flex;
-  justify-content: end;
-  height: 30px;
-  width: 100%;
-  position: absolute;
-  margin-top:530px;
+#root{
+  font-family: roboto;
 }
-
-@media (max-width:500px) {
-  .uparrow{
-    display: flex;
-    justify-content: end;
-    height: 50px;
-    width: 100%;
-    position: absolute;
-    margin-top:640px;
-  }
-}
-
-#scroll {
-  display: flex;
-  justify-content: center;
-  font-size: 15px;
-  width: 40px;
-  height:40px;
-  border-radius: 40px;
-  font-size: 22px;
-  text-align: center;
-  position: fixed;
-  color:white;
-  background-color: orangered;
-  z-index: 10;
-  padding-top:6px;
-  margin-right: 40px;
-}
-
-@media (max-width:500px) {
-  #scroll {
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    width: 40px;
-    height:40px;
-    border-radius: 40px;
-    font-size: 22px;
-    text-align: center;
-    position: fixed;
-    color:white;
-    background-color: orangered;
-    z-index: 10;
-    padding-top:6px;
-    margin-right: 20px;
-  }
-} */
