--- a/src/Services.css
+++ b/src/Services.css
@@ -4,6 +4,14 @@
   align-items: center;
   flex-wrap: wrap;
 } */
+
+.services-title {
+  font-size: 53px;
+  font-weight: 700;
+  text-align: center;
+  font-family:roboto;
+}
+
 .wrappers,
 .single-card{
   margin: auto;
@@ -11,6 +19,7 @@
   align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
+
 }
 
 .wrappers{
@@ -28,7 +37,7 @@
 }
 
 .front,.Back{
-  width: 300px;
+  width: 250px;
   position: relative;
   top: 0;
   left: 0;
@@ -36,15 +45,27 @@
 }
 
 .front{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
   cursor: pointer;
-  height: 100%;
+  height: 96%;
   backface-visibility: hidden;
-  border-radius: 50px;
+  text-align: center;
+  box-shadow: 0 0 5px 0px black;
 }
 
 .img{
-  height: 250px;
-width: 260px;
+  height: 200px;
+width: 230px;
+display: flex;
+justify-content: center;
+align-items: center;
+background-size:cover;
+background-position: center;
+background-repeat: no-repeat;
 }
 
 .Back{
@@ -52,23 +73,34 @@ width: 260px;
   position: absolute;
   height: 300px;
   box-shadow: 0 0 5px 0px black;
-  border-bottom:2px solid orange ;
-  background-image: linear-gradient(white 80%,orange);
+  border-bottom:8px solid rgb(32, 32, 253) ;
+  border-right: 4px solid rgb(32, 32, 255) ;
 }
 
 .card-content{
   color: black;
   padding-top:5%;
-  padding: 20px;
+  padding: 22px;
   text-align: center;
+  font-family:roboto;
+  font-size: 15px;
+  font-weight: 500;
+opacity: 0.9;
+
 }
 
 .front-titel{
   font-size: 20px ;
   font-weight: 700;
+  padding-bottom: 10px;
+  font-family:roboto;
+
 }
 .titel{
+  margin-top: 10px;
   color:black;
   font-size: 20px ;
 font-weight: 700;
+font-family:roboto;
+
 }
