--- a/src/ServicesType.css
+++ b/src/ServicesType.css
@@ -11,12 +11,14 @@
   font-size: 20px;
   font-weight: 600;
   color: orangered;
-  font-family: "Pacifico", cursive;
+  font-family: roboto;
 }
 .services-title {
   font-size: 53px;
   font-weight: 700;
   text-align: center;
+  font-family: roboto;
+
 }
 .service-cards-img {
   width: 130px;
@@ -70,7 +72,7 @@
 
 .span{background-color:blue;
   height: 55%;
-  top: 143px;
+  top: 152px;
   width: 0;
   position: absolute;
   left: 0;
@@ -116,7 +118,9 @@ color: white;
   font-weight: 700;
   text-align: center;
   z-index: 1;
-  padding-top: 10px;}
+  padding-top: 10px;
+  font-family: roboto;
+}
 
   @media  (max-width:550px) {
     .service-name {
@@ -124,26 +128,31 @@ color: white;
       font-weight: 700;
       z-index:1;
       padding-top: 10px;
-    text-align: center;}
+    text-align: center;
+    font-family: roboto;
+}
   }
 
 .discription {
   opacity: 0.8;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight:500;
   z-index:1;
   text-align: start;
   margin-left: 30px;
+  font-family: roboto;
 }
 
 @media  (max-width:550px) {
   .discription {
     opacity: 0.8;
-    font-size: 13px;
+    font-size: 15px;
     z-index: 1;
-    font-weight: 600;
+    font-weight: 500;
     text-align: start;
     margin: 10px;
+    font-family: roboto;
+
   }}
 
 
