--- a/src/Services.css
+++ b/src/Services.css
@@ -6,7 +6,7 @@
 } */
 
 .services-title {
-  font-size: 53px;
+  font-size:clamp(25px,9vw,50px);
   font-weight: 700;
   text-align: center;
   font-family:roboto;
@@ -51,10 +51,13 @@
   text-align: center;
   flex-direction: column;
   cursor: pointer;
-  height: 96%;
+  height: 300px;
   backface-visibility: hidden;
   text-align: center;
-  box-shadow: 0 0 5px 0px black;
+  /* box-shadow: 0 0 4px 0px black; */
+  border-top:2px solid orangered ;
+  border-bottom:2px solid orangered ;
+
 }
 
 .img{
@@ -72,9 +75,8 @@ background-repeat: no-repeat;
   transform: rotateY(180deg);
   position: absolute;
   height: 300px;
-  box-shadow: 0 0 5px 0px black;
-  border-bottom:8px solid rgb(32, 32, 253) ;
-  border-right: 4px solid rgb(32, 32, 255) ;
+  box-shadow: 10px 10px 0px 0px orange;
+border: 1px solid rgba(0, 0, 0, 0.103);
 }
 
 .card-content{
