--- a/src/ServicesType.css
+++ b/src/ServicesType.css
@@ -14,7 +14,7 @@
   font-family: roboto;
 }
 .services-title {
-  font-size: 53px;
+  font-size:clamp(25px,9vw,50px);
   font-weight: 700;
   text-align: center;
   font-family: roboto;
