--- a/src/Whychooseus.css
+++ b/src/Whychooseus.css
@@ -13,7 +13,7 @@ border-bottom: 5px solid  rgb(64, 64, 255);
 }
 
 .choose-titel{
-  font-size: 53px;
+  font-size:clamp(25px,9vw,50px);
   font-weight: 700;
   padding-bottom: 20px;
 }
