--- a/src/Components copy/ReqService.css
+++ b/src/Components copy/ReqService.css
@@ -62,6 +62,14 @@ margin-bottom: 50px;
     font-size: 15px;
 }
 
+.send-me-btn:hover{
+    background-color:#fff; 
+    color: #2F3369;
+    font-size: 15px;
+    font-weight: 600;
+    border: 3px solid #2F3369;
+}
+
 .input-box{
     position: relative;
     width: 100%;
