--- a/src/Components copy/Faq.css
+++ b/src/Components copy/Faq.css
@@ -1,26 +1,21 @@
-.faq_img{
-    width: 100%;
-    margin-top: 2rem;
-   transition: all 1.5s ease-in-out;
+.faq_img {
+  width: 90%;
+  margin-top: 1rem;
+  transition: all 1.5s ease-in-out;
 }
 
-.faq_img :hover{
-    transform: scale(0.9);
+.faq_img :hover {
+  transform: scale(1.2);
 }
 
-.main{
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
+.accordion_border{
+    margin-bottom: 1rem;
 }
 
-    .accordion_section{
-        background-color: #2F3369;
-    }
 
-    .accordion_bg{
-background-color: #2F3369;
-color: white;
-    }
 
-    
+
+
+
+
+
