--- a/src/components/termsCondition/TermCondition.css
+++ b/src/components/termsCondition/TermCondition.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .containerss{
   padding-top: 100px;
   padding-bottom: 150px;
