--- a/src/components/workProcess/WorkProcess.css
+++ b/src/components/workProcess/WorkProcess.css
@@ -1,24 +1,53 @@
-/* .workprocess{
-  text-align: center;
-  margin-right: 40px;
-  padding-bottom: 10px;
-  box-shadow:0 0 8px 1px rgb(218, 215, 208);
-  transition: ease-out 0.2s;
-  margin: 20px 0;
-  border-radius: 0px 50px 0px 50px;
- }
- .main-heading{
-  font-size:53px ;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+.work-heading{
+  margin-top: 15px;
+  font-size: 16px;
   font-weight: 700;
- }
- .sub-heading{
-  font-size: 22px;
-  font-weight: 600;
- }
- /*
- .container-main{
-  background-color: #04063c;
- } 
- .card-work{
-  background-color: rgb(232, 240, 246);
-} */ 
+  text-align: center;
+  background-color:rgb(11, 15, 79);
+  color: white;
+  border-radius: 50px;
+  padding-top:5px ;
+  padding-bottom:10px ;
+  
+
+}
+
+.imgs{
+  display: flex;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  width: 200px;
+  border-radius: 100px;
+  border-left:rgb(11, 15, 79)4px solid ;
+  border-bottom:#ff4328 4px dashed ;
+  border-right:#ff4328 4px solid ;
+  border-top:rgb(11, 15, 79) 4px dashed ;
+  padding:15px;
+
+
+}
+.work-card{
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  flex-direction: column;
+  text-align: center;
+  padding:20px ;
+  width: 250px;
+}
+.imgs2{
+  height: 195px;
+}
+.imgs4{
+  height: 200px;
+}
+.imgs3{
+   height: 200px;
+}
+.imgs5{
+  height:195px ;
+}
+
