--- a/src/Services.css
+++ b/src/Services.css
@@ -75,7 +75,7 @@ background-repeat: no-repeat;
   transform: rotateY(180deg);
   position: absolute;
   height: 300px;
-  box-shadow: 10px 10px 0px 0px orange;
+  box-shadow: 10px 10px 0px 0px ;
 border: 1px solid rgba(0, 0, 0, 0.103);
 }
 
