--- a/src/Components copy/Contact.css
+++ b/src/Components copy/Contact.css
@@ -8,11 +8,22 @@
   height: 60px;
   font-size: 30px;
   border-radius: 50%;
-  padding: 30px;
+  margin-bottom: 1rem;
   border: #2f3369 4px dashed;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  position: relative;
 }
 
-.contact_box {
+.main-icon {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
+
+.contact_box{
   width: 380px;
   height: 220px;
   display: flex;
@@ -22,6 +33,7 @@
   box-shadow: #8187e1 0 0 15px;
   padding: 1rem;
   border-radius: 20px;
+  align-items: center;
 
   text-align: center;
   color: #2f3369;
