--- a/src/components/Nav1/Nav1.css
+++ b/src/components/Nav1/Nav1.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
 .bg-nav{
   background-color:white;
   color: black;
@@ -7,7 +5,7 @@
   height: 80px;
 }
 nav .nav-item{
-  color: #242222;
+  color: hsl(0, 3%, 14%);
 }
 
 nav .nav-item:hover{
@@ -17,13 +15,11 @@ nav .nav-item:hover{
 }
 .blackl{
   color: black;
-  font-weight: 700;
+  
 }
 .nav-shadow{
  box-shadow: 0px 0px 5px 0px black;
 }
 .fontSize{
-  font-size: 16px;
-  font-family: roboto;
-  font-weight: 800;
+  
 }
