--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
 }
 h1{
   font-size: 40px;
-  font-weight: 900;
+  font-weight: 800;
+  font-weight: bold;
 }
 p{
   font-size: 16px;
 }
 h3{
-  font-size: 25px;
+  font-size: 18px;
   font-weight: 400;
 }
