--- a/src/components/myCarousel/MyCarousel.css
+++ b/src/components/myCarousel/MyCarousel.css
@@ -1,16 +1,14 @@
-
-  
-   .main {
+.main {
        background-color:rgb(11, 15, 79) ;
      }
   
   .background-slid {
-   margin-top: 20px;
+   margin-top: 0px;
    background-color:rgb(11, 15, 79) ; 
   }
-  
-  
-  .carousel-media-container {
+
+ 
+.carousel-media-container {
     /* Styles for media container to handle both image and video */
     display: flex;
     justify-content: center;
@@ -42,14 +40,44 @@
       margin-top: 25px;
     } } 
 
+    .carousel-slide1{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-top: 15px;
+      padding-left:60px;
+    }
+  
+   @media (max-width: 768px) {
+      .carousel-slide1{
+        display: flex;
+        align-items:start;
+        text-align:center;
+        margin-top: 50px;
+        padding-top: 50px;
+        padding-left: 10px;
+      } }
 
+      .carousel-slide2{
+        margin-left: 0px;
+        padding-left: 0px;
+        padding-top: 0px;
+        }
+
+       @media (max-width:768px) {
+        .carousel-slide2{
+           padding-left: 70px;
+        }
+
+       }
   .text-container {
-padding: 15px;
+   padding: 15px;
   }
 
   @media (max-width: 768px) {
     .text-container {
-      padding: 15px;
+      padding-left: 0px;
+      margin-left: 0px;
     }
   }
   
@@ -129,4 +157,6 @@ padding: 15px;
     margin-left: 1000px;
     
   }
-  
+  .text-container2 {
+     margin-left: 100px;
+  }
