--- a/src/components/team/Team.css
+++ b/src/components/team/Team.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .team-section {
   padding: 20px;
   padding-bottom: 70px;
@@ -13,17 +13,17 @@
   .team-heading123{
     color:#ff4328;
     font-size: 20px;
-    font-weight: 600px;
-    padding-top: 40px;
+    font-weight: 400px;
+    
    
 
   }
 
 .team-heading {
-  font-size: 43px;
-  font-weight: 600px;
-
-  margin-bottom: 10px;
+  font-size: 40px;
+  font-weight: 400px;
+  font-family: roboto;
+  margin-bottom: 5px;
 }
 
 .team-paragraph {
@@ -66,9 +66,19 @@
   margin-left: 100p;
   padding-left: 0px;
   padding-right: 0px;
-  
 
-}
+  }
+
+  @media (max-width: 768px) {
+    .team-image {
+  margin-left: 100p;
+  height: auto;
+  width:100% ;
+  padding-left: 0px;
+  padding-right: 0px;
+
+  }
+  }
 
 @media (max-width: 768px) {
   .team-member {
@@ -84,15 +94,18 @@
   }
 }
 .img-heading{
-  padding-top: 20px;
+  padding-top: 10px;
 }
 .designation{
   color: #ff4328;
-  margin-bottom: 30px;
+  
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 400;
 }
 .fontSizeteam{
   
 }
+.img-backgraund-color{
 
+  background-color:rgb(11, 15, 79);
+}
