--- a/src/ServicesType.css
+++ b/src/ServicesType.css
@@ -61,7 +61,7 @@
   flex-direction: column;
 }
 
-.spann{background-color:blue;
+.spann{background-color:rgb(11,15,79);
   height: 55%;
   width: 0;
   position: absolute;
