--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,14 @@ h1{
   font-weight: bold;
 }
 p{
-  font-size: 16px;
+  font-size: 18px;
 }
 h3{
+  font-size: 18px;
+  font-weight: 400;
+}
+h5{
+  
   font-size: 18px;
   font-weight: 400;
 }
