--- a/src/components/workProcess/WorkProcess.css
+++ b/src/components/workProcess/WorkProcess.css
@@ -1,7 +1,6 @@
 .work-heading{
   margin-top: 20px;
-  font-size: 18px;
-  font-weight: 400;
+
   text-align: center;
   background-color:rgb(11, 15, 79);
   color: white;
@@ -10,6 +9,7 @@
   padding-bottom:10px ;
   
 }
+
 
 .imgs{
   display: flex;
@@ -33,21 +33,25 @@
   padding:20px ;
   width: 250px;
 }
+.imgs1{
+  height: 195px;
+}
+
 .imgs2{
   height: 195px;
 }
 .imgs4{
-  height: 200px;
+  height: 199px;
 }
 .imgs3{
-   height: 200px;
+   height: 195px;
+   margin-top: 55px;
 }
 .imgs5{
-  height:195px ;
+  height:199px ;
+  margin-top: 65px;
 }
 .work-main-heading{
-  font-size: 40px;
-  font-weight: 800;
-  font-weight: bold;
+
   margin-top: 40px;
 }
